tests/reference/asr-test_bit_length-da3a264.stderr
semantic error: int.bit_length() takes no arguments
 --> tests/errors/test_bit_length.py:4:11
  |
4 |     print(x.bit_length(23))
  |           ^^^^^^^^^^^^^^^^ 
